# PolesioDayForum

./: .gitignore
backend/: .env  .env.debug  .gitignore  Cargo.toml  README.md
backend/migrations/2025-12-04-133723-0000_init_users/: up.sql
backend/src/: main.rs  schema.rs
backend/src/models/: mod.rs  post.rs  user.rs
backend/src/routes/: mod.rs  posts.rs  users.rs
backend/src/routes/api_models/: common.rs  mod.rs  post.rs  user.rs
backend/src/services/: mod.rs  user_services.rs
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
