[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
utoipa = { version = "5", features = ["macros"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
serde = { version = "1", features = ["derive"] }
env_logger = "0.11.8"
dotenv = "0.15.0"
log = "0.4"


